[gd_scene load_steps=6 format=3 uid="uid://yt3boj0lw4yf"]

[ext_resource type="Script" path="res://TestBS/RyanTestBS/Enemies/Enemy.gd" id="1_6ad6c"]
[ext_resource type="Script" path="res://TestBS/RyanTestBS/Enemies/State_Machine.gd" id="2_gbq0s"]
[ext_resource type="Script" path="res://TestBS/RyanTestBS/Enemies/States/Follow_State.gd" id="3_bma5r"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_lm62n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8iehw"]
radius = 7.0
height = 32.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_6ad6c")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
position = Vector2(5.36442e-07, 3.33786e-06)
scale = Vector2(14, 16)
mesh = SubResource("CapsuleMesh_lm62n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_8iehw")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="State_Machine" type="Node" parent="."]
script = ExtResource("2_gbq0s")

[node name="Follow_State" type="Node" parent="State_Machine"]
script = ExtResource("3_bma5r")

[connection signal="path_changed" from="NavigationAgent2D" to="." method="_path_changed"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_target_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
